reactjs-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: reactjs-app-service 
spec:
  selector:
    app: my-reactjs-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
